fixing no white space on menu bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,7 +213,7 @@ a:hover {
 IS THE MENU TOO LOW? CHANGE THIS MARGIN-BOTTOM VALUE */
 
 #contact {
-    margin-bottom:6vh;
+    margin-bottom:10vh;
 }
 .aboutPC {
   position: fixed;
